fix style when display on mobile

--- a/client/components/boards/boardBody.styl
+++ b/client/components/boards/boardBody.styl
@@ -61,6 +61,7 @@ position()
         display: flex
         flex-direction: column
         margin: 0
+        padding: 0
         // padding: 0 40px 0px 0
         overflow-x: hidden
         overflow-y: auto
