--- a/client/components/forms/forms.styl
+++ b/client/components/forms/forms.styl
@@ -706,4 +706,4 @@ button
   .edit-controls,
   .add-controls
     .fa-times-thin
-      margin: 3px 20px
+      margin: 3px 8px
