--- a/client/components/lists/list.styl
+++ b/client/components/lists/list.styl
@@ -191,11 +191,14 @@
     .list-header
       box-shadow: none
       margin-bottom: 0
+      border-top-color: #ffffff
 
   .list
     display: block
-    width: 100%
+    // width: 100%
     border-left: 0px
+    flex: none
+    padding-bottom: 12px
 
     &.ui-sortable-helper
       flex: 0 0 60px
