--- a/client/components/main/layouts.styl
+++ b/client/components/main/layouts.styl
@@ -497,6 +497,13 @@ a
       margin: 0
       padding: 0
 
+    .add-controls,
+    .edit-controls
+      .quiet, .quiet a
+        vertical-align: middle
+        line-height: 32px
+        display: inline-block
+
   .wrapper
     height: 100%
     margin: 0px
